recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:8: error: value trail is not a member of List[Int]
    return isMember(l.trail,v);
                      ^